<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fotomama.mneumann.fotomama.Activities.ProfileActivity">

    <TableLayout
        android:layout_width="368dp"
        android:layout_height="633dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher_round"
                tools:layout_editor_absoluteX="118dp"
                tools:layout_editor_absoluteY="26dp" />
        </TableRow>

        <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/my_profile_company"
                tools:layout_editor_absoluteX="41dp"
                tools:layout_editor_absoluteY="187dp" />
        </TableRow>

        <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/my_profile_address"
                android:inputType="textPostalAddress"
                tools:layout_editor_absoluteX="41dp"
                tools:layout_editor_absoluteY="248dp" />
        </TableRow>

        <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/editText3"
                android:layout_width="106dp"
                android:layout_height="39dp"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:hint="@string/my_profile_postalCode"
                tools:layout_editor_absoluteX="41dp"
                tools:layout_editor_absoluteY="305dp" />

        </TableRow>

        <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/editText4"
                android:layout_width="214dp"
                android:layout_height="39dp"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:hint="@string/my_profile_city"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="305dp" />

        </TableRow>


        <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="61dp"
            android:layout_height="34dp"
            android:hint="@string/my_profile_within_a_radius"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="352dp" />

            </TableRow>


        <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp">
        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="273dp"
            android:layout_height="27dp"
            android:max="200"
            android:theme="@style/AppTheme"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="396dp" />

        </TableRow>

        <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp">
        <EditText
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/my_profile_email"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="435dp" />

        </TableRow>

        <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/editText7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/my_profile_website"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="492dp" />

        </TableRow>

        <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/my_profile_save"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="539dp" />
        </TableRow>

           </TableLayout>














</android.support.constraint.ConstraintLayout>
